# error-log

./: CHANGES.md  README.md  dune-project  error-log-test.opam  error-log-tests.opam  error-log.opam  index.html
.github/workflows/: more-ci.yml
error-log/: db.js  index.html
error-log-test/: db.js  index.html
error-log-test/Error_log_test/: index.html
error-log-tests/: db.js  index.html
error-log-tests/Error_log_test/: index.html
error-log/Error_log/: index.html
error-log/Error_log/Config/: index.html
error-log/Error_log/Config/Mode/: index.html
error-log/Error_log/Err/: index.html
error-log/Error_log/Error/: index.html
error-log/Error_log/For_test/: index.html
error-log/Error_log/Message/: index.html
error-log/Error_log/Message/Kind/: index.html
error-log/Error_log/Style/: index.html
src/: dune  error_log.ml  error_log.mli
test/: dune  test__error_log.ml
test/cram/: dune  main.ml  run.t
