(library
 (name error_log)
 (public_name error-log)
 (instrumentation
  (backend bisect_ppx))
 (wrapped false)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio)
 (libraries base core.command loc pp pp-extended stdio stdune)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
