(library
 (name error_log)
 (public_name error-log)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (wrapped false)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio)
 (libraries base core.command loc pp pp-extended stdio stdune)
 (preprocess
  (pps
   ;; First I am checking that the new construct is enough to resolve the coverage issue.
   ;;   -unused-type-warnings=true
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
